2003-09-20  Hector E. Gomez Morales  <hgomez_36@flashmail.com>

	* en/Gtk/Window.xml: Nearly all methods documented.
	* en/Gtk/Widget.xml: SizeRequest method documented.

2003-09-20  John Luke  <jluke@cfl.rr.com>

	* en/Gnome/AppBar.xml: documented
	* en/Gnome/App.xml: half documented
	* en/Gnome/Entry.xml: half documented
	* en/Gnome/Window.xml: add some info
	
2003-09-17  John Luke  <jluke@cfl.rr.com>
	
	* en/*/*.xml: run the updater
	Add Art, Gda, and GnomeDb docs

2003-09-13  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/TreePath.xml: add info for ctor (string path)
	
2003-09-09  Duncan Mak  <duncan@ximian.com>

	* en/Glade: Update the docs to include new helper functions in
	Glade.XML. Also do some XML normalization.
x
2003-09-04  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/TextBuffer.xml: fix some typos
	
2003-08-29  John Luke  <jluke@cfl.rr.com>

	* en/GLib/*.xml: update, transfer info from inline comments
	* en/GtkSharp/SignalArgs.xml: transfer info from inline comments
	* en/GtkSharp/ObjectManager.xml: transfer info from inline comments
	* en/GtkSharp/SignalCallback.xml: transfer info from inline comments
	
2003-08-25  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Layout.xml: mostly documented
	* en/Gtk/Timeout.xml: documented

2003-08-18  John Luke  <jluke@cfl.rr.com>

	* en/Gnome/Help.xml: documented
	* en/Gnome/CanvasText.xml: add example from monkeyguide

2003-08-09  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Entry.xml: add example

2003-08-06  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Notebook.xml: add example, see references
	* en/Gtk/Statusbar.xml: add example

2003-08-06  Xavier Amado <xavier@blackbloodstudios.com>

	* /en/Gtk/Notebook.xml: documented the CurrentPageWidget property
                                                                           
2003-08-04  Martin Willemoes Hansen <mwh@sysrq.dk>
	* /en/Gnome/InteractFunction.xml:
	* /en/Gnome/ModuleClassInitHook.xml:
	* /en/Gnome/ModuleHook.xml:
	* /en/Gnome/ModuleInitHook.xml: