@@ -1,9 +1,11 @@
 <Namespace Name="Art" FullName="Art" FullNameSP="Art" Maintainer="Mono">
   <Docs>
     <summary>
+       Art handles the drawing capabilities in Gnome. All complex rendering is handled here.
     </summary>
     <remarks>
       <para>
+         Art is a 2D drawing library. Its goal is to be a high-quality vector-based 2D library with anti-aliasing and alpha composition.
       </para>
     </remarks>
   </Docs>
