@@ -1,9 +1,11 @@
 <Namespace Name="Gda" FullName="Gda" FullNameSP="Gda" Maintainer="Mono">
   <Docs>
     <summary>
+      Gnome data access.
     </summary>
     <remarks>
       <para>
+         Gnome Data Access (GDA) is an architecture whose purpose is to provide universal access to many different kinds and types of data sources. This goes from traditional relational database systems, to any imaginable kind of data source such as a mail server, a LDAP directory...
       </para>
     </remarks>
   </Docs>
