@@ -1,6 +1,7 @@
 <Namespace Name="GnomeDb" FullName="GnomeDb" FullNameSP="GnomeDb" Maintainer="Mono">
   <Docs>
     <summary>
+      Library for easily accessing different databases.
     </summary>
     <remarks>
       <para>
