@@ -1,3 +1,9 @@
+2003-09-23  John Luke  <jluke@cfl.rr.com>
+
+	* en/Art.xml:
+	* en/Gda.xml:
+	* en/GnomeDb.xml: add descriptions
+	
 2003-09-20  Hector E. Gomez Morales  <hgomez_36@flashmail.com>
 
 	* en/Gtk/Window.xml: Nearly all methods documented.
